# Empty-OpenGL-GLFW-GLAD-Project

./: 00-Hello-Window.cbp  00-Hello-Window.cbp.bak  00-Hello-Window.depend  CMakeLists.txt  CppCheckResults.xml  README.md  build.sh  filestructure.txt
include/: HelloWorld.h  WindowManager.h
src/: HelloWorld.cpp  HelloWorld.cpp.bak  WindowManager.cpp  glad.c
